--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,21 @@ h6,
 }
 
 
+.project-tab{
+    text-align: center;
+    margin: 20px;
+}
+
+@media (max-width: 414px) {
+    .project-tab{
+    text-align: center;
+    margin: 20px;
+    display: inline-block;
+}
+}
+
+
+
 /*** Spinner ***/
 #spinner {
     opacity: 0;
@@ -171,6 +186,17 @@ h6,
     display: flex;
     align-items: center;
     background: rgba(0, 0, 0, .5);
+}
+
+.owl-carousel-inner-project {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    background: rgba(0, 0, 0, 0);
 }
 
 @media (max-width: 768px) {
