--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ h6,
 .btn.btn-primary,
 .btn.btn-secondary {
     color: #FFFFFF;
+    border-radius: 8px;
 }
 
 .btn-square {
@@ -290,7 +291,7 @@ h6,
     transition: .5s;
 }
 
-.fact-item:hover .fact-icon {
+.fact-item:hover .fact-icon:hover {
     background: var(--dark);
 }
 
@@ -369,11 +370,12 @@ h6,
     height: 40px;
     display: inline-flex;
     align-items: center;
-    color: var(--dark);
-    background: #FFFFFF;
+    color: #777;
+    background: #f8f8f8;
     white-space: nowrap;
     overflow: hidden;
     transition: .5s;
+    border-radius: 8px;
 }
 
 .service-item:hover .btn {
@@ -385,10 +387,12 @@ h6,
 .project .nav .nav-link {
     background: var(--light);
     transition: .5s;
+    border-radius: 8px;
 }
 
 .project .nav .nav-link.active {
     background: var(--primary);
+    border-radius: 8px;
 }
 
 .project .nav .nav-link.active h3 {
